--- a/README.Rmd
+++ b/README.Rmd
@@ -35,21 +35,28 @@ This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
 library(epiworldR)
-## basic example code
+
+# Creating a SIR model
+sir <- epiworldR:::ModelSIR(
+  name = "COVID-19",
+  prevalence = .1,
+  infectiousness = .9,
+  recovery = .3
+  )
+
+# Adding a Small world population 
+epiworldR:::agents_smallworld(
+  sir,
+  n = 10000,
+  k = 5,
+  d = FALSE,
+  p = .01
+  )
+
+# Initializing 
+epiworldR:::init(sir, days = 100, seed = 1912)
+
+# Running and printing
+epiworldR:::run(sir)
+epiworldR:::print(sir)
 ```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
