Updating with new version of the library

--- a/README.Rmd
+++ b/README.Rmd
@@ -56,12 +56,10 @@ agents_smallworld(
   p = .01
   )
 
-# Initializing 
-init(sir, days = 100, seed = 1912)
 
 # Running and printing
 queuing_off(sir)
-run(sir)
+run(sir, ndays = 100, seed = 1912)
 sir
 ```
 
