Updating status->state

--- a/README.Rmd
+++ b/README.Rmd
@@ -45,21 +45,12 @@ sir <- ModelSIR(
   prevalence     = .01,
   infectiousness = .9,
   recovery       = .3
-  )
+  ) |>
+  # Adding a Small world population 
+  agents_smallworld(n = 100000, k = 10, d = FALSE, p = .01) |>
+  # Running the model for 100 days
+  run(ndays = 100, seed = 1912)
 
-# Adding a Small world population 
-agents_smallworld(
-  sir,
-  n = 100000,
-  k = 10,
-  d = FALSE,
-  p = .01
-  )
-
-
-# Running and printing
-queuing_off(sir)
-run(sir, ndays = 100, seed = 1912)
 sir
 ```
 
