--- a/README.Rmd
+++ b/README.Rmd
@@ -20,8 +20,11 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-This R package is a wrapper of the C++ library [epiworld](https://github.com/UofUEpi/epiworld). 
-It provides a general framework for modeling disease transmission using Agent-Based Models.
+This R package is a wrapper of the C++ library [epiworld](https://github.com/UofUEpi/epiworld). It provides a general framework for modeling disease transmission using Agent-Based Models. Some of the main features include:
+
+- Fast simulation with an average of 30 million agents/day per second.
+- One model can include multiple diseases.
+- Policies (tools) can be multiple and user-defined.
 
 ## Installation
 
@@ -34,9 +37,11 @@ devtools::install_github("UofUEpi/epiworldR")
 
 # Examples
 
+This R package comes shipped with a handful of popular epidemiological models, including SIS, SIR, and SEIR using either a fully connected graph (similar to a compartmental model) or a user-defined network. Here are some examples:
+
 ## SIR model using a random graph
 
-This is a basic example which shows you how to solve a common problem:
+This Susceptible-Infected-Recovered model features a population of 100,000 agents simulated in a small-world network. Each agent is connected to ten other agents. One percent of the population has the virus, which can be transmitted with a 70% chance. Infected individuals recover at a 0.3 rate:
 
 ```{r example}
 library(epiworldR)
