--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -1,10 +1,12 @@
 ---
-title: "SEIRD Model of COVID-19"
-author: "George Vega Yon & Derek Meyer "
+title: "Getting started with epiworldR"
+author:
+  - George Vega Yon
+  - Derek Meyer
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{SEIRD Model of COVID-19}
+  %\VignetteIndexEntry{Getting started with epiworldR}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -12,34 +14,47 @@ vignette: >
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>", out.width = "80%", fig.width = 7, fig.height = 5, fig.align = "center"
 )
 ```
 
-## epiworldR Info
+# Introduction
 
 Despite significant medical advances, infectious diseases continue to prevail worldwide, accounting for over 17 million deaths yearly (WHO). epiworldR is an R package that provides a fast (C++ backend) and highly-customizable framework for building network-based transmission/diffusion agent-based models [ABM]. This package provides valuable information that may aid in making informed, evidence-based policy decisions for the general population and performing complex simulation studies. epiworldR delivers a flexible tool that can capture transmission/diffusion dynamics complexity resulting from agents’ heterogeneity, network structure, transmission dynamics, environmental factors (e.g., policies,) and many other elements. Some key features of epiworldR are the ability to construct multi-disease models (e.g., models of competing multi-pathogens/multi-rumor,) design mutating pathogens, architect population-level interventions, and build models with an arbitrary number of compartments/states (beyond SIR/SEIR.) Moreover, epiworldR is really fast; for example, simulating a SIR model with 100,000 agents for 100 days takes less than $\frac{1}{3}$ of a second.
 
-## Example - SIR Model Simulation
+# Example 1: Simulating an SIR model
+
+## Setup and running the model
+
+In the following .... describe the type of simulation, what we mean with SIR connected
+
+```{r sirconn-setup}
+library(epiworldR)
+model_sir <- ModelSIRCONN(
+  name              = "COVID-19",
+  n                 = 100000, 
+  prevalence        = 0.001, 
+  contact_rate      = 2,
+  prob_transmission = 0.3,
+  prob_recovery     = 1/3
+  )
+```
+
+Printing the model shows us some information, in particular: ... describe each part of the printing: 
 
 ```{r}
-library(epiworldR)
-model_sir <- ModelSIR(name = "COVID-19", prevalence = 0.01, 
-                      infectiousness = 0.9, recovery = 0.1)
-
-# Adding a small world population
-agents_smallworld(
-  model_sir,
-  n = 1000,
-  k = 5,
-  d = FALSE,
-  p = .01
-  )
-  
-# Running and printing
-run(model_sir, ndays = 100, seed = 1912)
 model_sir
 ```
+  
+To execture the model, we use the run function...
+  
+```{r}  
+run(model_sir, ndays = 50, seed = 1912)
+model_sir
+```
+
+... explain what changed from the previous print...
+
 
 Begin by specifying the disease name, prevalence, infectiousness, and recovery
 using the ModelSIR function. This function collects information about the 
@@ -47,15 +62,76 @@ disease which will be spreading through the population. Next, specify the
 number of individuals in your population (n), (k), (d), and (p). Lastly, run 
 the SIR model for a specfied number of days (ndays) with an optional seed 
 for reproducibility.  
-  
-## Plot
+
+## Extracting information: Visualizing
+
+... epiworld_model has many methods...
+
+```{r showing-methods}
+methods(class = "epiworld_model")
+```
+
+Let's start from the basic: plot and get_hist_total
 
 ```{r, fig.show='hold'}
 plot(model_sir)
 ```
+
 As evident from the above plot, the SIR model constructed from epiworldR 
 displays the changes in susceptible, infected, and recovered case counts over 
 time (days). After roughly 70 days, the curves flatten.  
-  
-## More Examples
- ...
+
+```{r get-hist-total}
+head(get_hist_total(model_sir))
+```
+
+An important statistic in epidemiological models is the reproductive number
+
+```{r repnum}
+repnum <- get_reproductive_number(model_sir)
+head(repnum)
+```
+
+We have a method to automatically plot it
+
+```{r}
+x <- plot(repnum, type="b")
+```
+
+
+## Adding more viruses/variants
+
+epiworldR supporst muti-variant model, here is how we do it:
+
+```{r design-and-add}
+# Building the virus
+flu <- virus(
+  name = "Flu",
+  post_immunity  = 0.0,
+  prob_infecting = 1.0,
+  prob_recovery  = 0.0,
+  prob_death     = 0.0
+  )
+
+virus_set_state(flu, init = 1, end = 2, removed = 2)
+
+# Adding the virus to the model
+add_virus(model_sir, flu, .01)
+```
+
+```{r}
+run(model_sir, ndays = 50, seed = 1912)
+model_sir
+```
+
+```{r, fig.height=10}
+repnum2 <- get_reproductive_number(model_sir)
+
+op <- par(mfrow = c(2,1))
+plot(model_sir)
+plot(repnum2, type="b")
+par(op)
+```
+
+Running the previous model yields the following
+
