--- a/playground/epiworld_presentation.qmd
+++ b/playground/epiworld_presentation.qmd
@@ -104,28 +104,28 @@ seir
 ```{r}
 x <- get_hist_total(seir)
 x$counts <- x$counts/1000
-x <- x[x$dates < 50,]
+x <- x[x$date < 50,]
 
 with(
   x[x$status == "Susceptible",],
   plot(
-    x = dates, y = counts, type = "l", col = "blue", ylim = range(x$counts),
+    x = date, y = counts, type = "l", col = "blue", ylim = range(x$counts),
     ylab = "Population (thousands)", xlab = "days", main = "SEIR model")
   )
 
 with(
   x[x$status == "Exposed",],
-  lines(x = dates, y = counts, col = "purple")
+  lines(x = date, y = counts, col = "purple")
   )
 
 with(
   x[x$status == "Infected",],
-  lines(x = dates, y = counts, col = "red")
+  lines(x = date, y = counts, col = "red")
   )
 
 with(
   x[x$status == "Removed",],
-  lines(x = dates, y = counts, col = "darkgreen")
+  lines(x = date, y = counts, col = "darkgreen")
   )
 
 legend(
