--- a/vignettes/run-multiple.Rmd
+++ b/vignettes/run-multiple.Rmd
@@ -6,7 +6,7 @@ author:
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Getting started with epiworldR}
+  %\VignetteIndexEntry{Run-Multiple}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
